--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <img src="logo del turismo.png" width="300" height="250">
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>Ho</h2>
 </body>
 </html>
