--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Más
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Paises</a></li>
+              <li><a class="dropdown-item" href="#">Provincias</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Más destinos</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link disabled" aria-disabled="true"></a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -48,7 +48,42 @@
   </nav>
 </head>
   <body>
-    <h1>Hello, world!</h1>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <div class="card" style="width: 18rem;">
+        <img src="BarcelonaImangen.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Barcelona</h5>
+          <p class="card-text">España</p>
+          <a href="#" class="btn btn-primary">Viajar</a>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col order-5">
+     <div class="card" style="width: 18rem;">
+        <img src="OtawaImagen.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Otawa</h5>
+            <p class="card-text">Canada</p>
+            <a  href="#" class="btn btn-primary">Viajar</a>
+        </div>
+      </div>
+    </div>
+    <div class="col order-1">
+      <div class="card" style="width: 18rem;">
+        <img src="RomaImagen.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Roma</h5>
+          <p class="card-text">Italia</p>
+          <a href="#" class="btn btn-primary">Viajar</a>
+        </div>
+      </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
