--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -86,4 +87,47 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
+    <footer class="footer">
+      <div class="contenedor">
+            <div class="footer-row">
+              
+                <div class="turismo">
+                  <h5>Compania</h5><hr> 
+                   <ul>
+                     <li><a href="#">Nosotros</a></li>
+                     <li><a href="#">Nuestros Servicios</a></li>
+                     <li><a href="#">¿Quienes somos?</a></li>
+                    </ul>
+               </div> 
+              <div class="turismo">
+                <h5>Ayuda</h5><hr>
+                 <ul>
+                    <li><a href="#">Preguntas frecuentes</a></li>
+                    <li><a href="#">Formas de pago</a></li>
+                    <li><a href="#">Atencion al cliente</a></li>
+                  </ul>
+              </div> 
+              <div class="turismo">
+               <h5>Legales</h5><hr> 
+                <ul>
+                  <li><a href="#">Condiciones generales</a></li>
+                  <li><a href="#">Reclamos</a></li>
+                  <li><a href="#">Politica de privacidad</a></li>
+                  <li><a href="#">Politica de seguridad</a></li>
+                 </ul>
+            </div>
+            <div class="turismo">
+              <div class="iconos">
+               <h5>Siguenos</h5><hr>
+                  <ul>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-twitter-x"></i></a>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                  </ul>
+             </div>
+            </div>  
+           </div>  
+      </div>    
+    </footer>
+  </footer>
 </html>
