--- a/index.html
+++ b/index.html
@@ -9,46 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-        
-    <img src="logo del turismo.png" width="150" height="100">
-      <a class="navbar-brand" href="#">Navegacion</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Links</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Más
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Paises</a></li>
-              <li><a class="dropdown-item" href="#">Provincias</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Más destinos</a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true"></a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </div>
-  </nav>
 </head>
   <body>
+    <header class="navbar">
+      <nav>
+       <img src="SOL.png" alt="zzz" class="logo">
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Alojamientos</a></li>
+          <li><a href="#">Actividades</a></li>
+          <li><a href="#">Circuitos</a></li>
+          <li><a href="#">Paquetes</a></li>
+          <li><a href="#">Cuenta</a></li>
+        </ul>
+      </nav>
+    </header>
 </div>
 <div class="container text-center">
   <div class="row">
