--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <nav>
        <img src="SOL.png" alt="zzz" class="logo">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Alojamientos</a></li>
+          <!-- <li><a href="#">Inicio</a></li> -->
+          <!-- <li><a href="#">Alojamientos</a></li>
           <li><a href="#">Actividades</a></li>
           <li><a href="#">Circuitos</a></li>
-          <li><a href="#">Paquetes</a></li>
-          <li><a href="#">Cuenta</a></li>
+          <li><a href="#">Paquetes</a></li> -->
+          <li><a href="cuenta.html">Cuenta</a></li>
         </ul>
       </nav>
     </header>
@@ -32,6 +32,9 @@
         <img src="BarcelonaImangen.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Barcelona</h5>
+          <hr>
+          <span>Precio por persona: $1.299.390</span>
+          <hr>
           <p class="card-text">España</p>
           <a href="#" class="btn btn-primary">Viajar</a>
         </div>
@@ -43,6 +46,9 @@
         <img src="OtawaImagen.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Otawa</h5>
+            <hr>
+          <span>Precio por persona:$1.897.852 </span>
+          <hr>
             <p class="card-text">Canada</p>
             <a  href="#" class="btn btn-primary">Viajar</a>
         </div>
@@ -53,12 +59,15 @@
         <img src="RomaImagen.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Roma</h5>
+          <hr>
+          <span>Precio por persona: $1.878.562 </span>
+          <hr>
           <p class="card-text">Italia</p>
           <a href="#" class="btn btn-primary">Viajar</a>
         </div>
       </div>
     </div>
-</div>
+</div><br>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
@@ -71,7 +80,7 @@
                    <ul>
                      <li><a href="#">Nosotros</a></li>
                      <li><a href="#">Nuestros Servicios</a></li>
-                     <li><a href="#">¿Quienes somos?</a></li>
+                     <li><a href="https://es.wikipedia.org/wiki/Archivo:Logo-almundo.PNG">¿Quienes somos?</a></li>
                     </ul>
                </div> 
               <div class="turismo">
@@ -95,10 +104,11 @@
               <div class="iconos">
                <h5>Siguenos</h5><hr>
                   <ul>
-                    <a href="#"><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-twitter-x"></i></a>
-                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/almundo_ar/?hl=es" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://x.com/elmundoes?mx=2" target="_blank"><i class="bi bi-twitter-x"></i></a>
+                    <a href="https://www.facebook.com/despegar/" target="_blank"><i class="bi bi-facebook"></i></a>
                   </ul>
+
              </div>
             </div>  
            </div>  
