--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div class="turismo">
                 <h5>Ayuda</h5><hr>
                  <ul>
-                    <li><a href="#">Preguntas frecuentes</a></li>
+                    <li><a href="https://tenor.com/es/view/momo-italiano-tito-calderon-argentino-meme-gif-17383354283350448398">Preguntas frecuentes</a></li>
                     <li><a href="#">Formas de pago</a></li>
                     <li><a href="#">Atencion al cliente</a></li>
                   </ul>
